# kokkos-learn

./: CMakeLists.txt  main.cpp
